--- a/services/elasticsearch@.service
+++ b/services/elasticsearch@.service
@@ -5,10 +5,8 @@ Description=Elasticsearch
 Requires=docker.service
 Requires=etcd.service
 Requires=elasticsearch-dv@%i.service
-Wants=elasticsearch-discovery@%i.service
 
 # Dependency ordering and binding
-Before=elasticsearch-discovery@%i.service
 After=docker.service
 After=etcd.service
 After=elasticsearch-dv@%i.service
@@ -51,17 +49,17 @@ ExecStart=/bin/bash -c '\
     --discovery.zen.ping.multicast.enabled=false \
     --discovery.zen.ping.unicast.hosts=$UNICAST_HOSTS'
 
-#ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":$(docker port %p-%i | grep 9200 | cut -d: -f2),"cluster_port":$(docker port %p-%i | grep 9300 | cut -d: -f2)}'
+ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":$(docker port %p-%i | grep 9200 | cut -d: -f2),"cluster_port":$(docker port %p-%i | grep 9300 | cut -d: -f2)}'
 
 ExecStop=/usr/bin/docker stop %p-%i
 
 ExecStopPost=-/usr/bin/docker rm %p-%i
-#ExecStopPost=/usr/bin/bash -c '\
-#  if [ $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}/host | wc -l) -le 2 ]; then \
-#    curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host?recursive=true -XDELETE ;\
-#  else \
-#    curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XDELETE ;\
-#  fi'
+ExecStopPost=/usr/bin/bash -c '\
+  if [ $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}/host | wc -l) -le 2 ]; then \
+    curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host?recursive=true -XDELETE ;\
+  else \
+    curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XDELETE ;\
+  fi'
 
 [Install]
 WantedBy=multi-user.target
